a-new-startup-app/templates/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-a-new-startup
  namespace: mynamespace
spec:
  type: NodePort
  selector:
    app: a-new-startup
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
